2002-12-07	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Re-implemented transparency code to affect only text 
     instead of the whole window. Had to subclass NSWindow 
     since I ran into a nasty window redrawing Cocoa bug.
     
    * Instantiating scroll view in code rather than in NIB 
      to make layout look better.
      
    * PseudoTerminal is now a NSWindowController rather 
      than a NSResponder. Later I will refactor the code 
      to make is a true window controller.
      

2002-12-06	fabian
    * Fix (temporally) a bug that causes program to hang when a session is closed
    * Fix the NLog info in PTYSession.m

2002-12-05	fabian
    * Fix a bug that disable "clear buffer" in the menu
    * Fix a bug that causes incorrectly display of session status
    * Now choosing "open new tab" while no windows are open
      will open a new window first.
    * Cleaned up nib files
    
2002-12-04	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added a pulldown menu at the bottom right corner 
      when window cannot draw all the session buttons.
      
    * Made session buttons narrower in height.
    
    * Refactored some code.
    

2002-11-30	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed bug in PreferencePanel where transparency was
      not being stored.
      

2002-11-28	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Fixed crash when closing window when a session program 
      had exited.
      

2002-11-28      fabian
    * Added Japanese (EUC-JP/SJIS) and Korean (EUC-KR) support

2002-11-27	Ujwal S. Sathyam <ujwal@setlurgroup.com>

    * Added menu item and keyboard shortcut to close the current 
      terminal session.