@@ -5,10 +5,10 @@
 	<key>IBDocumentLocation</key>
 	<string>-6 141 356 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
-	<string>286.0</string>
+	<string>283.0</string>
 	<key>IBLockedObjects</key>
 	<array/>
 	<key>IBSystem Version</key>
-	<string>6F21</string>
+	<string>6C115</string>
 </dict>
 </plist>
