@@ -198,11 +198,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.5.0</string>
+	<string>0.5.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>0.5.0</string>
+	<string>0.5.1</string>
 	<key>NSExtensions</key>
 	<dict/>
 	<key>NSMainNibFile</key>
@@ -875,6 +875,7 @@
 				FB7EECE20340D3CD01F955DB,
 				FB7EECE30340D3CD01F955DB,
 				FB019DE603670C6501F955DB,
+				FBBB91E603A1033101F955DB,
 			);
 			isa = PBXHeadersBuildPhase;
 			runOnlyForDeploymentPostprocessing = 0;
@@ -994,6 +995,7 @@
 				FB7EECF30340D3CD01F955DB,
 				FB7EECF40340D3CD01F955DB,
 				FB019DE503670C6501F955DB,
+				FBBB91E703A1033201F955DB,
 			);
 			isa = PBXSourcesBuildPhase;
 			runOnlyForDeploymentPostprocessing = 0;
@@ -1160,6 +1162,18 @@
 		};
 		FBBB8B62039FC04E01F955DB = {
 			fileRef = FBBB8B60039FC04E01F955DB;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
+		FBBB91E603A1033101F955DB = {
+			fileRef = F52ED8DC037F0A7D01A8A066;
+			isa = PBXBuildFile;
+			settings = {
+			};
+		};
+		FBBB91E703A1033201F955DB = {
+			fileRef = F52ED8DD037F0A7D01A8A066;
 			isa = PBXBuildFile;
 			settings = {
 			};
